@@ -1,8 +1,7 @@
-#Sat Oct 17 20:29:23 CEST 2009
+#Sun Oct 18 00:19:57 CEST 2009
 eclipse.preferences.version=1
 encoding//src/packages/tests/__init__.py=utf-8
 encoding//src/packages/tests/test_md5.py=utf-8
 encoding//src/packages/tests/test_md5_encode.py=utf-8
 encoding//src/packages/tests/test_password_validate.py=utf-8
 encoding/setup.py=utf-8
-encoding/test_md5_operation.py=utf-8
