@@ -1,4 +1,5 @@
 Sat Oct 17 2009   "Patrick Näf" <herzbube@herzbube.ch>
+- [bugfix] fixed a few incompatibilities with Python 2.6 and earlier
 - [test] fixed unit tests to work with md5 object
 - [bugfix] replace wrappers related to original MD5 by md5 object [#70]
 - [bugfix] use explicit value APR_SUCCESS to check return status
